[package]
authors = ["Nick Mosher <nicholastmosher@gmail.com>"]
edition = "2018"
name = "atsam4s"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.7"
cortex-m-rt = "0.6.3"
cortex-m-semihosting = "0.3.1"
panic-halt = "0.2.0"
atsam4s16b-embedded-hal = { git = "https://github.com/nicholastmosher/atsam4s16b-embedded-hal.git" }
alloc-cortex-m = "0.3.5"
capnp = { path = "../capnproto-rust/capnp", features = ["no_std"] }

[build-dependencies]
capnp = { path = "../capnproto-rust/capnp", default-features = false, features = [] }
capnpc = { path = "../capnproto-rust/capnpc", default-features = false, features = [] }

[[bin]]
name = "blinky"
path = "src/bin/blinky.rs"

[[bin]]
name = "alloc_blinky"
path = "src/bin/alloc_blinky.rs"

[[bin]]
name = "capn_proto"
path = "src/bin/capn_proto.rs"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
